6 Jun 2018
update: README.md

5 Jun 2018
replace: jquery.simpleCaptcha-0.2.js with reCAPTCHA V2
fix: userdetails.php tabs not working
fix: > UC_UPLOADER should not be demoted to UC_VIP when donating
fix: remove Cache class instantiation

4 Jun 2018
update: when cleanup item is missed, next cleanup time is set to time later than now
fix: cleanup manager not updating or creating cleanup items
update: timeout for all index page blocks
fix: set timeout on cron_controller cache, in the event any cleanup failed cleanup would not run again

3 Jun 2018
remove: mcrypt check during install
change: some non-expiring cache items to 86400
move: 404.jpg, off.gif, on.gih to public/images/
fix: admin/events.php format_username
fix: admin/editlog.php remove check_user_status
remove: mcrypt dependency for bitbucket
add: bucket folder for bitbucket
update: bitbucket.php

2 Jun 2018
change: persistent db connections to false
fix: typo in ajax_tooltips.php
remove: show_staffshout from database

30 May 2018
remove: tfreak.php has no need for check_user_status since not loaded directly by user
fix: typo in cleanup_manager.php
add: ability to reset cleanup time to yesterday midnight from cleanup manager
remove: radio.php has no need for check_user_status since not loaded directly by user
remove: need to hash check, salty function for logout.php
revert: reversed conditionals
fix: a couple of var set that should have been a comparison
replace: sizeof with count for consistency
replace: __DIR__ with dirname(__FILE__) for consistency
update: README to include required MariaDB settings
add: check for innodb_file_format , innodb_large_prefix, innodb_file_per_table in mysql during install

27 May 2018
remove: cleanup from user thread, remove autoclean and register_shutdown_function
add: cronjob to contol cleanup on separate thread
update: manually set $_SERVER['HTTP_HOST'] = $site_config['domain'] when $_SERVER['HTTP_HOST'] and $_SERVER['SERVER_NAME'] are empty