@@ -75,7 +75,8 @@ if (empty($user_id)) {
                       false,
                       $context
         );
-        if (!$result['success']) {
+        $responseKeys = json_decode($result, true);
+        if (intval($responseKeys['success']) !== 1) {
             stderr('Error', "reCAPTCHA Failed");
         }
     }
