@@ -1,4 +1,5 @@
 6 Jun 2018
+fix: reCAPTCHA success check
 update: README.md
 
 5 Jun 2018
